fix: css made board have double scroll bars

--- a/Assets/css/week-helper.css
+++ b/Assets/css/week-helper.css
@@ -31,6 +31,7 @@
 	opacity: 0 !important;
 	transition: .25s;
 	width: 0px;
+	overflow: hidden;
 }
 .task-board:hover .task-spent-estimated {
 	position: relative;
